--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "babel-loader": "^10.0.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^7.1.2",
+    "ejs-loader": "^0.5.0",
     "file-loader": "^6.2.0",
+    "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "image-webpack-loader": "^8.1.0",
     "mini-css-extract-plugin": "^2.9.2",
